test/classes/delete-free/type-casting.good
type-casting.chpl:12: In function 'makeBorrowedBang1':
type-casting.chpl:13: error: duplicate decorators - borrowed borrowed MyClass
type-casting.chpl:54: Function 'makeBorrowedBang1' instantiated as: makeBorrowedBang1(type t = MyClass)
type-casting.chpl:12: In function 'makeBorrowedBang1':
type-casting.chpl:13: error: duplicate decorators - borrowed borrowed MyClass
type-casting.chpl:60: Function 'makeBorrowedBang1' instantiated as: makeBorrowedBang1(type t = MyClass?)
